--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,11 @@ ext['hibernate.version'] = '5.2.10.Final'
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.boot:spring-boot-starter-data-rest') {
+		exclude module: "jackson-databind"
+	}
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
