--- a/data-rest/src/main/resources/application.yml
+++ b/data-rest/src/main/resources/application.yml
@@ -1,12 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://172.16.135.15:3306/autoconfiguration
-    username: mns
-    password: dltmxmdlsxjspt
+    url: jdbc:mysql://
+    username:
+    password:
     driver-class-name: com.mysql.jdbc.Driver
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
   data:
     rest:
       base-path: /api
