--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ subprojects {
         compile('org.springframework.boot:spring-boot-starter-data-jpa')
         compile('org.springframework.boot:spring-boot-starter-security')
         compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+        compile('org.springframework.data:spring-data-rest-hal-browser')
 
         runtime('org.springframework.boot:spring-boot-devtools')
         runtime('mysql:mysql-connector-java')
