--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.5.8.RELEASE'
+        springBootVersion = '2.0.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -14,6 +14,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'eclipse'
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     group = 'com.rest'
     version = '0.0.1-SNAPSHOT'
@@ -22,8 +23,6 @@ subprojects {
     repositories {
         mavenCentral()
     }
-
-    ext['hibernate.version'] = '5.2.10.Final'
 
     dependencies {
         compile('org.springframework.boot:spring-boot-starter-data-jpa')
